# home-energy-management

./: .gitignore  .pre-commit-config.yaml  README.md  data_download.py  electricity_tariffs.ipynb  fitting.py  forecasting.ipynb  hem.ipynb  hem_affine_peak_cost.ipynb  hem_affine_peak_cost_2.ipynb  hem_affine_peak_cost_3.ipynb  hem_tiered_globalsearch_final.ipynb  hem_tiered_peak_cost.ipynb  hem_tiered_peak_cost_2.ipynb  hem_tiered_relaxresolve_final copy.ipynb  home_energy_management.ipynb  latexify.py  linear_peak_cost.ipynb  load_forecast.ipynb  milp.ipynb  optimization.ipynb  price_forecast.ipynb  pyproject.toml  run.py  sim_linear.ipynb  simple.ipynb  snippets.ipynb  spot_price_forecast.ipynb  test.ipynb  test2.ipynb  utils.py
data/: AR_params.pickle  autoreg_residual_params.pickle  da_price_AR_params.pickle  da_price_AR_params.pkl  da_price_baseline.csv  da_prices.csv  fixed_price_data.pickle  load_2020.csv  load_2021.csv  load_2022.csv  load_AR_params.pickle  load_AR_params.pkl  load_baseline.csv  load_baseline.pickle  load_data.pickle  loads.csv  price_data.pickle  sigma_residual_errors.pickle  spot_price_AR_params.pickle  spot_price_baseline.csv  spot_price_baseline.pickle  spot_price_data.csv  spot_price_data.pickle  spot_price_data_jan2023.csv  spot_price_data_jan2023.pickle  spot_prices.csv  spot_prices_jan2023.xlsx  tou_prices.csv  train_residual.pickle
hem/: data.py  forecast.py  plot.py  policies.py
results/: baseline.pkl  capacity_sweep.pkl  mpc.pkl  prescient.pkl  sensitivity.pkl  sim_data.pkl
src/: __init__.py  devices.py  helper_functions.py  (+2 more)
